fix stylesheet spacing

--- a/ui-server/public/stylesheets/sinatra.css
+++ b/ui-server/public/stylesheets/sinatra.css
@@ -8,14 +8,15 @@ body {
   padding:0;
 }
 
-/* HEADER */
 #head {
   text-align:center;
 }
+
 #head h1 a, #head h1 a:link, #head h1 a:visited, #head h1 a:hover {
   color:#100;
   text-decoration:none;
 }
+
 #head ul {
   font-size:1.1em;
   font-family:"lucida console", "monaco", "andale mono", "bitstream vera sans mono",
@@ -27,21 +28,22 @@ body {
   margin:0;
   padding:0 40px 0.25em 40px;
 }
+
 #head ul li {
   display:inline;
   list-style-type:none;
   padding:0 0.5em 0 0;
 }
+
 #head ul a, #head ul a:link, #head ul a:visited {
   color:#56534f;
   text-decoration:none;
 }
+
 #head ul a:hover {
   color:#000;
   text-decoration:underline
 }
-
-/* CONTENT */
 
 #content {
   color:#111;
@@ -62,8 +64,7 @@ body {
   text-align: center;
 }
 
-.thumbnails {
-}
+.thumbnails {}
 
 .thumbnails img {
   margin: 10px;
@@ -79,35 +80,34 @@ body {
   filter:alpha(opacity=100)
 }
 
-/* HEADINGS */
-
 h3 {
   color:#000;
   font-size:1.1em;
   letter-spacing:-1px;
   margin:1.8em 0 -0.25em 0;
 }
+
 h3 a { color:#000 }
 
-/* LINKS */
 a {
   color:#000;
   text-decoration:underline;
 }
+
 a:hover {
   color:#910;
   text-decoration:underline;
 }
+
 a img {
   border:none;
 }
-
-/* CODE */
 
 code, pre, textarea, tt {
   font-family:"lucida console", "monaco", "andale mono", "bitstream vera sans mono",
     "consolas", monospace;
 }
+
 pre {
   font-size:0.85em;
   background:#f4f5f5;
@@ -117,6 +117,7 @@ pre {
   color:#111;
   overflow: auto;
 }
+
 p.warning {
   font-size:0.85em;
   background:#f4f5f5;
